--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   background-color: #11a78e;
   border: 2px solid black;
   text-align: center;
+  overflow: hidden;
 }
 .topnav li {
   float: left;
