--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   font-size: 18px;
   width: 20%;
   list-style-type: none;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .topnav ul {
   background-color: #edf7f6;
@@ -46,7 +46,7 @@ body {
   top: 200px;
   left: 50px;
   font-size: 55px;
-  font-family: 'Lobster', cursive;;
+  font-family: "Lobster", cursive;
   font-weight: bold;
   border: 6px outset #edf7f6;
   border-radius: 30px;
